rewrite the gravity network example

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -237,29 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-3.        , -1.        ,  2.        ],\n",
-       "       [ 0.        ,  0.33333333,  0.33333333],\n",
-       "       [ 0.        ,  1.66666667,  0.66666667]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -270,20 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-11.        ,   0.66666667,   4.33333333])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y1"
    ]
@@ -304,19 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  0.  0.]\n",
-      " [ 0.  0.  1.]\n",
-      " [ 0.  1.  0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "P2 = np.identity(3)[[0,2,1]]\n",
     "\n",
@@ -325,43 +291,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-3.         -1.          2.        ]\n",
-      " [ 0.          1.66666667  0.66666667]\n",
-      " [ 0.          0.33333333  0.33333333]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print np.dot(P2, A1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-11.           4.33333333   0.66666667]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print np.dot(P2, y1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -394,29 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-3.        , -1.        ,  2.        ],\n",
-       "       [ 0.        ,  1.66666667,  0.66666667],\n",
-       "       [ 0.        ,  0.        ,  0.2       ]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -427,20 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-11.        ,   4.33333333,  -0.2       ])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z"
    ]
@@ -454,17 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.  3. -1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print np.linalg.solve(B,z)"
    ]
@@ -478,17 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.  3. -1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print np.linalg.solve(A,y)"
    ]
@@ -809,6 +717,118 @@
     "1) In your `my_functions.py` file, create a function to compute the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, according to the scheme presented above.\n",
     "\n",
     "2) Create two tests in your `test_my_functions.py` file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function created in the previous item and verify if the products dot(A, Ainv) and dot(Ainv, A) are equal to the identity matrix. The second test must compare the inverse matrix computed by using your function and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def permut (C, i):\n",
+    "    p = [j for j in range(C.shape[0])]\n",
+    "    imax = i + np.argmax(np.abs(C[i:,i]))\n",
+    "    if imax != i:\n",
+    "        p[i], p[imax] = p[imax], p[i]\n",
+    "    return p, C[p,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "C = 10*np.round(np.random.rand(3,4), decimals=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.78  2.62  2.67  9.46]\n",
+      " [ 3.65  4.76  8.47  3.41]\n",
+      " [ 8.18  3.96  7.85  2.32]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "p, E = permut(C, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8.18  3.96  7.85  2.32]\n",
+      " [ 3.65  4.76  8.47  3.41]\n",
+      " [ 1.78  2.62  2.67  9.46]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8.18  3.96  7.85  2.32]\n",
+      " [ 3.65  4.76  8.47  3.41]\n",
+      " [ 1.78  2.62  2.67  9.46]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print C[p]"
    ]
   },
   {
