--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -29,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -175,14 +173,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 21"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Simulate the simple gravity network represented above. First, simulate the parameter vector $\\mathbf{g}$ containing the gravity values at all nodes.\n",
+    "1. In your `my_functions.py` file, create a function that defines the matrix $\\mathbf{A}$. The function must receive three  \n",
+    "Simulate the simple gravity network represented above. First, simulate the parameter vector $\\mathbf{g}$ containing the gravity values at all nodes.\n",
     "\n",
     "2. Create the matrix $\\mathbf{A}$ and the data vector $\\mathbf{d}$.\n",
     "\n",
@@ -209,7 +208,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -225,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -259,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -273,9 +270,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
