least squares class

--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, consider the problem of determining $\\mathbf{x}$ from the observed data $\\mathbf{d}$ and the $N \\times M$ matrix $\\mathbf{A}$. Mathematically, this problem consists in determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$. To solve this problem, we need to define what *\"as close as possible\"* means. The notion of \"*closeness*\" is intrinsically related to the notion of \"*distance*\" and, consequently, to the notion of <a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)\">norm</a>.\n",
+    "Now, consider the problem of determining $\\mathbf{x}$ from the observed data $\\mathbf{d}$ and the $N \\times M$ matrix $\\mathbf{A}$. Mathematically, this problem consists in determining a vector $\\mathbf{x} = \\tilde{\\mathbf{x}}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$. To solve this problem, we need to define what *\"as close as possible\"* means. The notion of \"*closeness*\" is intrinsically related to the notion of \"*distance*\" and, consequently, to the notion of <a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)\">norm</a>.\n",
     "\n",
     "For example, let's consider a vector $\\mathbf{r} = \\mathbf{d} - \\mathbf{y}$, which is defined as the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$. The vector $\\mathbf{r}$ is usually called **residuals vector**. The length of the residuals vector can be determined by the following scalar function:"
    ]
@@ -175,14 +175,14 @@
    "source": [
     "where $r_{i} = d_{i} - y_{i}$, $i = 1, \\dots, N$. This function is a norm that quantifies the \"*distance*\" between the vectors $\\mathbf{d}$ and $\\mathbf{y}$. It is called **<a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm\">Euclidean norm</a>** (or **Euclidean distance**). Notice that this function equals to zero if $\\mathbf{d} = \\mathbf{y}$ and it is greater than zero if $\\mathbf{d} \\ne \\mathbf{y}$.\n",
     "\n",
-    "So, the problem of determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$ can be thought of the problem of determining a parameter vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing the minimum Euclidean norm of the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$."
+    "So, the problem of determining a vector $\\mathbf{x} = \\tilde{\\mathbf{x}}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$ can be thought of the problem of determining a parameter vector $\\mathbf{x} = \\tilde{\\mathbf{x}}$ producing the minimum Euclidean norm of the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practical situations, instead of determining the vector $\\mathbf{x}^{\\ast}$ minimizing the Euclidean norm of $\\mathbf{r}$, we determine the vector $\\mathbf{x}^{\\ast}$ minimizing the **Squared Euclidean norm** (or **<a href=\"https://en.wikipedia.org/wiki/Euclidean_distance\">Squared Euclidean distance</a>**) of $\\mathbf{r}$, which is given by:"
+    "In practical situations, instead of determining the vector $\\tilde{\\mathbf{x}}$ minimizing the Euclidean norm of $\\mathbf{r}$, we determine the vector $\\tilde{\\mathbf{x}}$ minimizing the **Squared Euclidean norm** (or **<a href=\"https://en.wikipedia.org/wiki/Euclidean_distance\">Squared Euclidean distance</a>**) of $\\mathbf{r}$, which is given by:"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By considering that there is only one particular parameter vector $\\mathbf{x}^{\\ast}$ minimizing the misfit function $\\Phi(\\mathbf{x})$, we can state that"
+    "By considering that there is only one particular parameter vector $\\tilde{\\mathbf{x}}$ minimizing the misfit function $\\Phi(\\mathbf{x})$, we can state that"
    ]
   },
   {
@@ -239,10 +239,10 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\Phi(\\mathbf{x}^{\\ast} + \\Delta \\mathbf{x})\n",
+    "\\Phi(\\tilde{\\mathbf{x}} + \\Delta \\mathbf{x})\n",
     "\\begin{cases}\n",
-    "\\gt \\Phi(\\mathbf{x}^{\\ast}) \\, , \\: \\text{if} \\:\\: \\| \\Delta \\mathbf{x}\\|_{2} \\ne 0 \\\\\n",
-    "= \\Phi(\\mathbf{x}^{\\ast}) \\, , \\: \\text{if} \\:\\: \\| \\Delta \\mathbf{x}\\|_{2} = 0 \\\\\n",
+    "\\gt \\Phi(\\tilde{\\mathbf{x}}) \\, , \\: \\text{if} \\:\\: \\| \\Delta \\mathbf{x}\\|_{2} \\ne 0 \\\\\n",
+    "= \\Phi(\\tilde{\\mathbf{x}}) \\, , \\: \\text{if} \\:\\: \\| \\Delta \\mathbf{x}\\|_{2} = 0 \\\\\n",
     "\\end{cases} \\: .\n",
     "$$"
    ]
@@ -251,14 +251,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We may use the misfit function to estimate the particular parameter vector $\\mathbf{x}^{\\ast}$. To do it, we may simply compute the misfit function produced by a set of given parameter vectors and choose the particular parameter vector producing the minimum misfit function value."
+    "We may use the misfit function to estimate the particular parameter vector $\\tilde{\\mathbf{x}}$. To do it, we may simply compute the misfit function produced by a set of given parameter vectors and choose the particular parameter vector producing the minimum misfit function value."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we may estimate the parameter vector $\\mathbf{x}^{\\ast}$ by exploring the derivatives of the misfit function with respect to the components $x_{j}$, $j = 1, \\dots, M$, of the parameter vector. We know that, if the misfit function assumes a minimum value at $\\mathbf{x}^{\\ast}$, then its gradient evaluated at $\\mathbf{x}^{\\ast}$ equals to the null vector. It means that"
+    "Alternatively, we may estimate the parameter vector $\\tilde{\\mathbf{x}}$ by exploring the derivatives of the misfit function with respect to the components $x_{j}$, $j = 1, \\dots, M$, of the parameter vector. We know that, if the misfit function assumes a minimum value at $\\tilde{\\mathbf{x}}$, then its gradient evaluated at $\\tilde{\\mathbf{x}}$ equals to the null vector. It means that"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\nabla \\Phi(\\mathbf{x}^{\\ast}) = \n",
+    "\\nabla \\Phi(\\tilde{\\mathbf{x}}) = \n",
     "\\left[ \\begin{array}{c}\n",
     "0 \\\\\n",
     "\\vdots \\\\\n",
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, by evaluating the gradient $\\nabla \\Phi(\\mathbf{x})$ at $\\mathbf{x} = \\mathbf{x}^{\\ast}$, we obtain "
+    "Finally, by evaluating the gradient $\\nabla \\Phi(\\mathbf{x})$ at $\\mathbf{x} = \\tilde{\\mathbf{x}}$, we obtain "
    ]
   },
   {
@@ -359,8 +359,8 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\nabla \\Phi(\\mathbf{x}^{\\ast}) &= -2 \\mathbf{A}^{\\top} \\left[ \\mathbf{d} - \\mathbf{A}\\mathbf{x}^{\\ast} \\right] \\\\\n",
-    "\\mathbf{0} &= -\\mathbf{A}^{\\top}\\mathbf{d} + \\mathbf{A}^{\\top}\\mathbf{A}\\mathbf{x}^{\\ast} \n",
+    "\\nabla \\Phi(\\tilde{\\mathbf{x}}) &= -2 \\mathbf{A}^{\\top} \\left[ \\mathbf{d} - \\mathbf{A}\\tilde{\\mathbf{x}} \\right] \\\\\n",
+    "\\mathbf{0} &= -\\mathbf{A}^{\\top}\\mathbf{d} + \\mathbf{A}^{\\top}\\mathbf{A}\\tilde{\\mathbf{x}} \n",
     "\\end{split} \\: ,\n",
     "$$"
    ]
@@ -377,7 +377,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right) \\mathbf{x}^{\\ast} = \\mathbf{A}^{\\top}\\mathbf{d} \\: .\n",
+    "\\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right) \\tilde{\\mathbf{x}} = \\mathbf{A}^{\\top}\\mathbf{d} \\: .\n",
     "$$"
    ]
   },
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, to determine the vector $\\mathbf{x}^{\\ast}$, it is needed to solve a square linear system with a symmetric matrix $\\mathbf{A}^{\\top}\\mathbf{A}$ and an independent vector $\\mathbf{A}^{\\top}\\mathbf{d}$."
+    "Notice that, to determine the vector $\\tilde{\\mathbf{x}}$, it is needed to solve a square linear system with a symmetric matrix $\\mathbf{A}^{\\top}\\mathbf{A}$ and an independent vector $\\mathbf{A}^{\\top}\\mathbf{d}$."
    ]
   },
   {
@@ -412,11 +412,45 @@
     "\\mathbf{t} = \\mathbf{H} \\mathbf{v} + \\mathbf{c} \\: ,\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{H}$ and $\\mathbf{c}$ are, respectively, an $N \\times N$ matrix and an $N \\times 1$ vector formed by constant (non-random) elements. In this case, the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) of $\\mathbf{t}$ (denoted by $\\mathbf{\\Sigma}\\left( \\mathbf{t}\\right)$) can be computed by using the covariance matrix of $\\mathbf{v}$ (denoted by $\\mathbf{\\Sigma}\\left( \\mathbf{v}\\right)$) as follows:\n",
+    "where $\\mathbf{H}$ and $\\mathbf{c}$ are, respectively, an $N \\times N$ matrix and an $N \\times 1$ vector formed by constant (non-random) elements. In this case, the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) of $\\mathbf{t}$ (denoted by $\\mathbf{\\Sigma_{t}}$) can be computed by using the covariance matrix of $\\mathbf{v}$ (denoted by $\\mathbf{\\Sigma_{v}}$) as follows:\n",
     "\n",
     "$$\n",
-    "\\mathbf{\\Sigma}\\left( \\mathbf{t}\\right) = \\mathbf{H} \\, \\mathbf{\\Sigma}\\left( \\mathbf{v}\\right) \\mathbf{H}^{\\top} \\: .\n",
+    "\\mathbf{\\Sigma_t} = \\mathbf{H} \\, \\mathbf{\\Sigma_{v}} \\mathbf{H}^{\\top} \\: .\n",
+    "$$\n",
+    "\n",
+    "The matrix $\\mathbf{\\Sigma_{t}}$ is symmetric, with elements $ij$ representing the covariance between the $i$-th and $j$-th elements of $\\mathbf{t}$. Consequently, the elements $ii$ on its main diagonal represent the variances of the elements of $\\mathbf{t}$. If all elements $ij$ outside the main diagonal of $\\mathbf{\\Sigma_{t}}$ are zero, we say that the elements of $\\mathbf{t}$ are uncorrelated. If we additionally consider that all elements of $\\mathbf{t}$ have the same variance $\\sigma_{\\mathbf{t}}^{2}$, the covariance matrix $\\mathbf{\\Sigma_{t}}$ assumes the particular form:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{\\Sigma_t} = \\sigma_{\\mathbf{t}}^{2} \\mathbf{I} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{I}$ represents the identity. The matrix $\\mathbf{\\Sigma_{v}}$ is defined in the same way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using this equation and the least-squares estimator, we may define the covariance matrix $\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}}$ of the estimated parameter vector $\\tilde{\\mathbf{x}}$ as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}} \n",
+    "= \\left[ \\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right)^{-1}\\mathbf{A} \\right] \\mathbf{\\Sigma_{d}} \n",
+    "\\left[ \\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right)^{-1}\\mathbf{A} \\right]^{\\top} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{\\Sigma_{d}}$ is the covariance matrix of the observed data $\\mathbf{d}$. By considering that the observed data are uncorrelated and have the same covariance $\\sigma_{\\mathbf{d}}^{2}$, the covariance matrix $\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}}$ of the estimated parameter vector $\\tilde{\\mathbf{x}}$ assumes the particular form:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}} = \\sigma_{\\mathbf{d}}^{2} \\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right)^{-1} \\: .\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the uncertainty of the $j$-th element of the estimated parameter vector $\\tilde{\\mathbf{x}}$ can be defined as the root square of the $j$-th element of the main diagonal of $\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}}$."
    ]
   },
   {
@@ -482,7 +516,9 @@
     "\n",
     "3. Calculate the predicted data at the coordinates `x`. Use your previously implemented functions for calculating any matrix operation.\n",
     "\n",
-    "4. Plot the noise-corrupted data and the predicted data."
+    "4. Use the covariance matrix of the estimated parameters to compute their uncertainty. You must use one of your previous functions to compute the inverse matrix.\n",
+    "\n",
+    "5. Plot the noise-corrupted data and the predicted data."
    ]
   },
   {
