least-squares and simple gravity network classes

--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -516,7 +516,7 @@
     "\n",
     "3. Calculate the predicted data at the coordinates `x`. Use your previously implemented functions for calculating any matrix operation.\n",
     "\n",
-    "4. Use the covariance matrix of the estimated parameters to compute their uncertainty. You must use one of your previous functions to compute the inverse matrix.\n",
+    "4. Use the covariance matrix of the estimated parameters to compute their uncertainty. You must use one of your previous functions to compute the inverse matrix. Consider that all data have the same variance given by the square of the standard deviation (the variable `stdev` used below) of the simulated noise.\n",
     "\n",
     "5. Plot the noise-corrupted data and the predicted data."
    ]
