--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -233,28 +233,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The two images below illustrate the LDL<sup>T</sup> algorithm for the particular case in which $N = 4$."
+    "The following cells illustrate the LDL<sup>T</sup> algorithm for the particular case in which $N = 4$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='ldlt_decomp/LDLt_decomposition_1.jpg' width = 600>"
+    "$$\n",
+    "\\begin{split}\n",
+    "\\begin{bmatrix}\n",
+    "a_{11} & a_{21} & a_{31} & a_{41} \\\\\n",
+    "a_{21} & a_{22} & a_{32} & a_{42} \\\\\n",
+    "a_{31} & a_{32} & a_{33} & a_{43} \\\\\n",
+    "a_{41} & a_{42} & a_{43} & a_{44}\n",
+    "\\end{bmatrix}\n",
+    "&=\n",
+    "\\begin{bmatrix}\n",
+    "1 &  &  &  \\\\\n",
+    "l_{21} & 1 & & \\\\\n",
+    "l_{31} & l_{32} & 1 & \\\\\n",
+    "l_{41} & l_{42} & l_{43} & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "d_{11} &  &  &  \\\\\n",
+    "& d_{22} & & \\\\\n",
+    "& & d_{33} & \\\\\n",
+    "& & & d_{44}\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "1 & l_{21} & l_{31} & l_{41} \\\\\n",
+    " & 1 & l_{32} & l_{42} \\\\\n",
+    " & & 1 & l_{43} \\\\\n",
+    " & & & 1\n",
+    "\\end{bmatrix} \\\\\\\\\n",
+    "&=\n",
+    "\\begin{bmatrix}\n",
+    "1 &  &  &  \\\\\n",
+    "l_{21} & 1 & & \\\\\n",
+    "l_{31} & l_{32} & 1 & \\\\\n",
+    "l_{41} & l_{42} & l_{43} & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "d_{11} & d_{11} \\, l_{21} & d_{11} \\, l_{31} & d_{11} \\, l_{41} \\\\\n",
+    " & d_{22} & d_{22} \\, l_{32} & d_{22} \\, l_{42} \\\\\n",
+    " & & d_{33} & d_{33} \\, l_{43} \\\\\n",
+    " & & & d_{44}\n",
+    "\\end{bmatrix}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='ldlt_decomp/LDLt_decomposition_2.jpg' width = 600>"
+    "Column 1 $\\left( \\, j = 1 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{11} &= d_{11} &\\longrightarrow \\: &d_{11} = a_{11} \\\\\\\\\n",
+    "a_{21} &= d_{11} l_{21} &\\longrightarrow \\: &l_{21} = \\frac{a_{21}}{d_{11}} \\\\\\\\\n",
+    "a_{31} &= d_{11} l_{31} &\\longrightarrow \\: &l_{31} = \\frac{a_{31}}{d_{11}} \\\\\\\\\n",
+    "a_{41} &= d_{11} l_{41} &\\longrightarrow \\: &l_{41} = \\frac{a_{41}}{d_{11}}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be shown that, given a symmetric matrix $\\mathbf{A}$, the matrices $\\mathbf{L}$ and $\\mathbf{D}$ can be calculated as follows:"
+    "Column 2 $\\left( \\, j = 2 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{22} &= (d_{11} l_{21}) l_{21} + d_{22} &\\longrightarrow \\: \n",
+    "&d_{22} = a_{22} - (d_{11} l_{21}) l_{21} \\\\\\\\\n",
+    "a_{32} &= (d_{11} l_{21}) l_{31} + d_{22} l_{32} &\\longrightarrow \\: \n",
+    "&l_{32} = \\frac{a_{32} - (d_{11} l_{21}) l_{31}}{d_{22}} \\\\\\\\\n",
+    "a_{42} &= (d_{11} l_{21}) l_{41} + d_{22} l_{42} &\\longrightarrow \\: \n",
+    "&l_{42} = \\frac{a_{42} - (d_{11} l_{21}) l_{41}}{d_{22}} \\\\\\\\\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Column 3 $\\left( \\, j = 3 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{33} &= (d_{11} l_{31}) l_{31} + (d_{22} l_{32}) l_{32} + d_{33} &\\longrightarrow \\: \n",
+    "&d_{33} = a_{33} - (d_{11} l_{31}) l_{31} - (d_{22} l_{32}) l_{32} \\\\\\\\\n",
+    "a_{43} &= (d_{11} l_{31}) l_{41} + (d_{22} l_{32}) l_{42} + d_{33} l_{43} &\\longrightarrow \\: \n",
+    "&l_{43} = \\frac{a_{43} -(d_{11} l_{31}) l_{41} - (d_{22} l_{32}) l_{42}}{d_{33}} \\\\\\\\\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Column 4 $\\left( \\, j = 4 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{44} &= (d_{11} l_{41}) l_{41} + (d_{22} l_{42}) l_{42} + (d_{33} l_{43}) l_{43} + d_{44} &\\longrightarrow \\: \n",
+    "&l_{44} = a_{44} - (d_{11} l_{41}) l_{41} - (d_{22} l_{42}) l_{42} - (d_{33} l_{43}) l_{43}\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The example given above can be easily generalized for any symmetric $N \\times N$ matrix $\\mathbf{A}$. Based on the example given above, the matrices $\\mathbf{L}$ and $\\mathbf{D}$ can be calculated as follows:"
    ]
   },
   {
