rewrite the non-linear problem

--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The vector $\\mathbf{x}$ is usually called **parameter vector**. Notice that, to determine the parameter vector $\\mathbf{x}$ from $\\mathbf{d}$ and $\\mathbf{A}$, it is needed to solve a non-square linear system."
+    "The vectors $\\mathbf{x}$, $\\mathbf{y}$, and $\\mathbf{d}$ are usually called **parameter vector**, **predicted data vector**, and **observed data vector**, respectively. Notice that determining the parameter vector $\\mathbf{x}$ from $\\mathbf{d}$ and $\\mathbf{A}$ requires to solve a non-square linear system."
    ]
   },
   {
